packages/cli/fixtures/logs/rust/borrow-error.txt
error[E0502]: cannot borrow `data` as mutable because it is also borrowed as immutable
  --> src/lib.rs:45:5
   |
42 |     let view = &data[0..3];
   |                 ---- immutable borrow occurs here
...
45 |     data.push(42);
   |     ^^^^ mutable borrow occurs here
46 |     println!("{:?}", view);
   |                      ---- immutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.